# mlx90640_thermal_camera-release

./: CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
include/mlx90640_thermal_camera/: i2c_driver.h  mlx90640.h  params.h
launch/: thermal_camera.launch
src/: i2c_driver.cpp  main.cpp  mlx90640.cpp
