<?xml version="1.0"?>
<package format="2">
  <name>mlx90640_thermal_camera</name>
  <version>1.0.0</version>
  <description>The mlx90640_thermal_camera package</description>

  <maintainer email="jadit19@gmail.com">Adit Jain</maintainer>
  <maintainer email="akshitv18@gmail.com">Akshit Verma</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>